--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-remark-images": "^5.9.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-source-sanity": "^7.0.7",
     "gatsby-transformer-sharp": "^3.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
